--- a/src/App.css
+++ b/src/App.css
@@ -37,3 +37,21 @@
     transform: translateY(0px);
   }
 }
+
+.row-reverse{
+  flex-direction: row-reverse;
+  align-items: flex-end;
+}
+.row{
+  flex-direction: row;
+  align-items: flex-start;
+}
+
+@media (max-width:786px) {
+  .row{
+    flex-direction: column;
+  }
+  .row-reverse{
+    flex-direction: column;
+  }
+}
